<resources>
    <string name="app_name">blocktrace</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">Update Profile</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main_logged_in">blocktrace</string>

    <string name="preference_companies_key">com.example.tessa.kyc.USER_SIGNED_COMPANIES</string>
    <string name="preference_getting_started">com.example.tessa.kyc.USER_START</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="placeholder_text">Placeholder text here</string>
    <string name="fetching_data">Fetching data…</string>

    <string name="loading">Loading…</string>

    <string name="custom_token">Custom Token</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="token_null">Token: null</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="link">Link Account</string>

    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="validate_image_upload">Please upload an image of yourself holding your identification documents for verification purposes</string>

    <string name="create_account">Create Account</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="company_login">Login to %1$s</string>

    <string name="app_shared_userId">com.example.tessa</string>

    <string name="scan_nfc_token">Please Scan Your \nblocktrace Token</string>
    <string name="scan_nfc_token_write">Please Scan Your \nblocktrace Token <b><u>Again</u></b></string>

    <string name="report_token_loss">Report Loss of Token</string>

    <string name="report_loss_read">PLEASE READ CAREFULLY BEFORE PROCEEDING:\n\n</string>

    <string name="report_token_text">
        \nFor security reasons, you will have to re-register for KYC.\n\nIf your token is faulty, DO NOT CONTINUE.\n\nCall the blocktrace service hotline for a replacement instead.
    </string>

    <string name="token_loss_prompt">Please enter your NRIC/FIN number for verification purposes</string>

    <string name="agree_and_continue">Continue</string>

    <string name="content_attribute">Content_Attribute</string>

    <string name="update_profile">Update your profile</string>

    <string name="profile_info">Your information from the previous submission was not verified successfully. Please re-enter your details and re-update your profile.</string>
    <string name="email">E-mail</string>
    <string name="uid">Uid</string>
    <string name="full_name">Full Name <i>(as in NRIC/Passport)</i></string>
    <string name="postal_code">Postal Code</string>
    <string name="id_no">Identification Number</string>
    <string name="dob">Date of Birth</string>
    <string name="image_verdoc">Image of verification document</string>
    <string name="submit">Submit</string>

    <string name="new_users">New to us? Sign Up</string>

    <string name="welcome_login">Welcome,\n %1$s!</string>
    <string name="obtaining_status">Obtaining Token Status…</string>

    <string name="link_company">Link A New Company Your blocktrace Account</string>
    <string name="companyID_prompt">Enter Company ID</string>
    <string name="companyID_hint">Company ID (~1000–1004)</string>



</resources>
