<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:paddingTop="50dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:id="@+id/MainLog_Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/input_regular"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:text="@string/welcome_login" />

    <TextView
        android:id="@+id/MainLog_EmailTitle_TextView"
        android:layout_below="@+id/MainLog_Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/input_bold"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/MainLog_Email_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainLog_EmailTitle_TextView"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:inputType="textEmailAddress"
        android:text="@string/fetching_data"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/MainLog_IDTitle_TextView"
        android:layout_below="@+id/MainLog_Email_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/input_bold"
        android:text="@string/uid"/>

    <TextView
        android:id="@+id/MainLog_ID_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainLog_IDTitle_TextView"
        android:layout_gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/fetching_data"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/MainLog_Image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/MainLog_ID_TextView"
        android:scaleType="centerInside"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:src="@drawable/pendingicon"/>

    <TextView
        android:id="@+id/MainLog_TokenStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainLog_Image"
        android:layout_gravity="center"
        android:fontFamily="@font/input_bold"
        android:text="@string/obtaining_status"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />



</RelativeLayout>