<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyLoginActivity">

    <ImageView
        android:id="@+id/companyLogin_logo"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:gravity="center"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/CompanyLogin_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:onClick="onClick"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/CompanyLogin_password"
                android:layout_below="@+id/CompanyLogin_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:onClick="onClick"
                android:inputType="textPassword" />

        </RelativeLayout>

    </LinearLayout>
    <Button
        android:id="@+id/CompanyLogin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:theme="@style/ThemeOverlay.MyDarkButton" />
</LinearLayout>
