<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/grey_100"
android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/SignUp_icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/kyc" />

        <!--<TextView
            android:id="@+id/SignUp_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/SignUp_email_password_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/SignUp_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:onClick="onClick"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/SignUp_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:onClick="onClick"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/email_create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClick"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

</LinearLayout>