<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tessa.kyc.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Login_icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/kyc" />

        <TextView
            android:id="@+id/Login_status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/Login_email_password_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/Login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:onClick="onClick"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/Login_password"
                android:layout_below="@+id/Login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:onClick="onClick"
                android:inputType="textPassword" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClick"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

    <TextView
        android:id="@+id/Profile_Invalid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Invalid Username or Password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <Button
        android:id="@+id/Login_forgotPwd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Forgot Password?"
        android:textAllCaps="true"
        android:textSize="10sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/Login_signUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="New to us? Sign Up"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:textStyle="italic"
        android:onClick="onClick"/>

</LinearLayout>
