<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context="com.example.tessa.kyc.CompanySignUpActivity"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="Enter Company ID"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/company_id"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Company ID"/>

    <Button
        android:id="@+id/company_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Submit"
        android:layout_margin="16dp"
        android:textAllCaps="true"
        android:onClick="onClick"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

    <ImageView
        android:id="@+id/company_logo"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/Company_email_password_fields"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:gravity="center"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Company_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:onClick="onClick"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/Company_password"
                android:layout_below="@+id/Company_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:onClick="onClick"
                android:inputType="textPassword" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Company_email_password_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Company_link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:onClick="onClick"
        android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>
</ScrollView>

